<resources>
    <string name="app_name">WhatToDo</string>
    <string name="action_settings">Settings</string>

    <string name="string_category_default">Default</string>
    <string name="string_category_work">Work</string>
    <string name="string_category_study">Study</string>
    <string name="string_category_workout">Workout</string>
    <string name="string_category_personal">Personal</string>
    <string name="string_category_relax">Relax</string>
    <string-array name="category_default">
        <item>Default</item>
        <item>Work</item>
        <item>School</item>
        <item>Workout</item>
        <item>Personal</item>
        <item>Relax</item>
    </string-array>

    <string name="toolbar_title">All Tasks</string>
    <string-array name="toolbar_filter">
        <item>All Tasks</item>
        <item>On Time</item>
        <item>Overdue</item>
    </string-array>

    <string name="btn_get_task">What to do?</string>

    <!--Task Listview & Bottom Sheet-->
    <string name="label_overdue">Overdue</string>
    <string name="btn_task_did">Did It</string>
    <string name="btn_task_abort">Give Up</string>
    <string name="label_working">Working on:</string>
    <plurals name="label_count_down">
        <item quantity="one">%d more time left</item>
        <item quantity="other">%d more times left</item>
    </plurals>
    <plurals name="label_count_up">
        <item quantity="one">Have done this %d time</item>
        <item quantity="other">Have done this %d times</item>
    </plurals>
    <string name="label_due">Due on: %s</string>

    <!--Empty View-->
    <string name="label_no_task">No Task</string>
    <string name="label_add_task_hint">View your to-do list here after \nadding tasks with the &#x2795; button</string>

    <!--Task Dialog-->

    <string name="edit_task_name">Task Name</string>
    <string name="label_task_priority">Priority</string>
    <string name="label_deadline">Deadline</string>
    <string name="label_task_trackable">Trackable</string>
    <string name="btn_start_task">Start</string>
    <string name="btn_decline_task">Later</string>
    <string name="label_take_task_hint">Start working on this task?</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_category">Category</string>
    <string name="pref_category_priority">Change category priority</string>
    <string name="pref_summ_category_switch">Tasks are displayed and suggested based on the priority of their category.</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_category_switch">Enable category priority</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>




</resources>
