<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/string_category_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_work"
            android:drawableTop="@drawable/ic_work_red_500_24dp"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:layout_margin="8dp" />

        <Button
            android:text="@string/string_category_study"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_school"
            android:drawableTop="@drawable/ic_school_orange_500_24dp"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:layout_margin="8dp" />

        <Button
            android:text="@string/string_category_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_default"
            android:drawableTop="@drawable/ic_default_grey_500_24dp"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:layout_margin="8dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/string_category_workout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_exercise"
            android:drawableTop="@drawable/ic_fitness_center_teal_500_24dp"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:layout_margin="8dp" />

        <Button
            android:text="@string/string_category_personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_personal"
            android:drawableTop="@drawable/ic_person_green_500_24dp"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:layout_margin="8dp" />

        <Button
            android:text="@string/string_category_relax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_relax"
            android:drawableTop="@drawable/ic_relax_light_green_500_24dp"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:layout_margin="8dp" />
    </LinearLayout>

</LinearLayout>