<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.justinhu.whattodo.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!--Title-->
        <LinearLayout
            android:id="@+id/view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/taskname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/edit_task_name"
                    android:inputType="text|textCapWords|textAutoCorrect"
                    android:labelFor="@+id/textView_name"
                    android:layerType="software"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/task_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"

                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@null"
                android:src="@drawable/btn_default_category" />


        </LinearLayout>
        <!--Priority-->
        <LinearLayout
            android:id="@+id/view_priority"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/label_task_priority"
                android:textSize="18sp" />

            <RatingBar
                android:id="@+id/priority"
                style="@style/Widget.AppCompat.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:clickable="true"
                android:isIndicator="false"
                android:numStars="5"
                android:stepSize="1" />
        </LinearLayout>
        <!--Trackable-->
        <LinearLayout
            android:id="@+id/view_trackable_opt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"

            android:paddingTop="4dp"
            android:visibility="visible">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_task_trackable"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/trackable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />
        </LinearLayout>
        <!--Trackable option-->
        <LinearLayout
            android:id="@+id/view_trackable_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/repetition"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Repetition"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/task_count"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:text="1"
                    android:textAlignment="textEnd"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/deadline_opt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:text="Has Deadline"
                    android:textSize="18sp" />

                <Switch
                    android:id="@+id/has_deadline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/deadline_value"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/deadline_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Due on"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/deadline_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@null"
                    android:textAlignment="textEnd"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />


            </LinearLayout>


        </LinearLayout>
        <!--UnTrackable option-->
        <LinearLayout
            android:id="@+id/view_unackable_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Some Frequency limit" />


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/task_take"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/takeTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_take_task_hint"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="32dp"
                android:paddingStart="32dp">


                <Button
                    android:id="@+id/decline"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_decline_task"
                    android:textColor="@android:color/white"
                    android:textStyle="normal|bold"
                    android:theme="@style/AppTheme.ButtonOverlay.negative" />

                <Space
                    android:layout_width="32dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/accept"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_start_task"
                    android:textColor="@android:color/white"
                    android:textStyle="normal|bold"
                    android:theme="@style/AppTheme.ButtonOverlay.positive" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/task_ongoing"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="You are working on this task"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingEnd="32dp"
                android:paddingStart="32dp">


                <Button
                    android:id="@+id/button_abort"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:theme="@style/AppTheme.ButtonOverlay.white"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_task_abort"
                    android:textSize="14sp" />

                <Space
                    android:layout_width="32dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/button_did"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_task_did"
                    android:textSize="14sp" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
